# lollipop-python

./: .cspell.json  .envrc  .readthedocs.yaml  .ruff.toml  404.html  CHANGELOG.md  Justfile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml  python.just
.config/mise/: config.toml
.github/workflows/: docs.yaml  release.yaml  test.yaml
SUMMARY/: index.html
api/SUMMARY/: index.html
api/liblaf/lollipop/: index.html
api/liblaf/lollipop/hello/: index.html
api/liblaf/lollipop/sort_toml/: index.html
api/liblaf/lollipop/utils/: index.html
docs/: README.md
search/: search_index.json
src/liblaf/lollipop/: __init__.pyi  __main__.py  _app.py
src/liblaf/lollipop/cmd/: _app.py
src/liblaf/lollipop/cmd/hello/: _app.py
src/liblaf/lollipop/hello/: __init__.pyi  _app.py  _main.py
src/liblaf/lollipop/sort_toml/: _app.py  _main.py
src/liblaf/lollipop/utils/: __init__.pyi  _add_command.py  _new_app.py
tests/: test_sample.py
